优化webfetch工具，新增自定义子agent功能